<resources>
    <string name="app_name">ToDoList</string>
    <string name="boardingBtn">Get started</string>
    <string name="boardingTitle">Hey, I\'m Ticky!</string>
    <string name="boardingText">I know you’ve got many things to do but I’m here to help you organize</string>

    <!-- Home Page -->
    <string name="date">July, 2022</string>
    <string name="addBtn">New task</string>
    <string name="done">Done</string>
    <string name="delete">Delete</string>
    <string name="to_do">To do</string>
    <string name="sort_by">sort by</string>
    <string name="completed">Completed</string>

    <!-- Empty Page -->
    <string name="empty">Add some tasks, don\'t make me bored</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Add New Task -->
    <string name="back">Back</string>
    <string name="addTv">Stuff to do</string>
    <string name="addEditTv">Type your task here</string>

    <string name="dateAdded">Date added</string>
    <string name="dueDate">Due date</string>
    <string name="colorLabel">Color label</string>

    <string name="strike_text">1.<strike>Complete open water diving certification</strike></string>


</resources>