<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/custom_color_primary"
    tools:context=".OnboardingFragment">


    <LinearLayout
        android:id="@+id/onboardingLinearId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/onboardingImg"
            android:layout_width="229dp"
            android:layout_height="208dp"
            android:src="@drawable/bitmap" />

        <LinearLayout
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/onboardingTitle"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_marginTop="0dp"
                android:text="@string/boardingTitle"
                android:textColor="@color/custom_color_dark"
                android:textSize="28sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="23dp"
                android:gravity="center"
                android:text="@string/boardingText"
                android:textSize="15sp" />


        </LinearLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/onboardingBtn"
            android:layout_width="155dp"
            android:layout_height="60dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/custom_color_dark"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/boardingBtn"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:cornerRadius="16dp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>