<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".UpdateFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/updateBackAndCalendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/updateBackContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/updateArrowBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_baseline_keyboard_arrow_left_24"
                app:layout_constraintBottom_toBottomOf="@+id/updateBack"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/updateBack" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/updateBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_medium"
                android:text="@string/back"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/updateArrowBack"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/updateCalendarIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/calendar"
            app:layout_constraintBottom_toBottomOf="@+id/updateBackContainer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/updateBackContainer" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/updateChoseDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/updateBackContainer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/updateBackContainer">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/updateSelectedDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="25dp"
                android:fontFamily="@font/ubuntu_medium"
                android:text="Due 28 Aug."
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/updateCleanDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:background="@drawable/x"
                app:layout_constraintBottom_toBottomOf="@+id/updateSelectedDate"
                app:layout_constraintStart_toEndOf="@+id/updateSelectedDate"
                app:layout_constraintTop_toTopOf="@+id/updateSelectedDate" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
    <!-- Back and calendar -->

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/updateAppCompatTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/ubuntu_medium"
        android:text="@string/addTv"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/updateBackAndCalendar"
        app:layout_constraintTop_toBottomOf="@+id/updateBackAndCalendar" />

    <EditText
        android:id="@+id/updateAddEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:hint="@string/addEditTv"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/custom_weeks"
        app:layout_constraintEnd_toEndOf="@+id/updateBackAndCalendar"
        app:layout_constraintStart_toStartOf="@+id/updateBackAndCalendar"
        app:layout_constraintTop_toBottomOf="@+id/updateAppCompatTextView" />

    <!-- Circle start -->
    <LinearLayout
        android:id="@+id/updateAllCircle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="150dp"
        android:orientation="horizontal"
        android:weightSum="9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateAddEditText">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/updateFirsCircle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_weight="1"
            android:background="@drawable/circle"
            android:backgroundTint="@color/firs_color" />


        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/updateSecondCircle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="15dp"
            android:background="@drawable/circle"
            android:backgroundTint="@color/second_color" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/updateThreeCircle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_weight="1"
            android:background="@drawable/circle"
            android:backgroundTint="@color/three_color" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/updateFourCircle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_weight="1"
            android:background="@drawable/circle"
            android:backgroundTint="@color/four_color" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/updateFiveCircle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="15dp"
            android:background="@drawable/circle"
            android:backgroundTint="@color/five_color" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/updateSixCircle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="15dp"
            android:background="@drawable/circle"
            android:backgroundTint="@color/six_color" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/updateSevenCircle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="15dp"
            android:background="@drawable/circle"
            android:backgroundTint="@color/seven_color" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/updateEightCircle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_weight="1"
            android:background="@drawable/circle"
            android:backgroundTint="@color/eight_color" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/updateNineCircle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/circle"
            android:backgroundTint="@color/nine_color" />

    </LinearLayout> <!-- Circle end -->


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/updateAddPageButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="35dp"
        app:layout_constraintTop_toBottomOf="@+id/updateAllCircle"
        app:layout_constraintStart_toStartOf="@+id/updateAllCircle"
        app:layout_constraintEnd_toEndOf="@+id/updateAllCircle">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/x"
            android:backgroundTint="@color/black"
            android:layout_marginEnd="70dp"
            app:layout_constraintEnd_toEndOf="@+id/updateAddPageCancelBtn"
            app:layout_constraintStart_toStartOf="@+id/updateAddPageCancelBtn"
            app:layout_constraintTop_toTopOf="@+id/updateAddPageCancelBtn"
            app:layout_constraintBottom_toBottomOf="@+id/updateAddPageCancelBtn"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/updateAddPageCancelBtn"
            android:layout_width="160dp"
            android:layout_height="60dp"
            android:fontFamily="@font/ubuntu"
            android:textColor="@color/custom_color_dark"
            android:textSize="16sp"
            android:gravity="center"
            android:backgroundTint="@color/custom_color_primary"
            android:text="Calcel"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />



        <com.google.android.material.button.MaterialButton
            android:id="@+id/updateAddPageSaveBtn"
            android:layout_width="160dp"
            android:backgroundTint="@color/custom_color_dark"
            android:text="Save"
            android:textColor="@color/white"
            android:fontFamily="@font/ubuntu_medium"
            app:cornerRadius="15dp"
            android:textAllCaps="false"
            android:layout_height="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>